WIP: Add macros; Add prepare_* functions to other platforms; Add generate secp keys
Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,4 @@
 [workspace]
-members = [
-  "http",
-  "cli",
-  "lib",
-  "lib/cbindings",
-  "lib/web",
-]
+members = ["http", "cli", "lib", "lib/cbindings", "lib/web", "macros"]
 
-default-members = [
-  "http",
-  "cli",
-  "lib",
-  "lib/cbindings",
-]
+default-members = ["http", "cli", "lib", "lib/cbindings", "macros"]
