Add ios.stamp to main test target in Makefile
Signed-off-by: Tiago Nascimento <tiago.nascimento@spruceid.com>

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -17,6 +17,7 @@ endif
 test: $(TARGET)/test/c.stamp \
 	$(TARGET)/test/java.stamp \
 	$(TARGET)/test/android.stamp \
+	$(TARGET)/test/ios.stamp \
 	$(TARGET)/test/flutter.stamp \
 	$(TARGET)/test/wasm.stamp
 
