--- a/.cargo/config
+++ b/.cargo/config
@@ -1,11 +1,15 @@
-[target.i686-linux-android]
-linker = "i686-linux-android16-clang"
+[target.aarch64-linux-android]
+ar = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android-ar"
+linker = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android30-clang"
 
 [target.armv7-linux-androideabi]
-linker = "armv7a-linux-androideabi16-clang"
+ar = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/arm-linux-androideabi-ar"
+linker = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/armv7a-linux-androideabi30-clang"
 
-[target.aarch64-linux-android]
-linker = "aarch64-linux-android21-clang"
+[target.i686-linux-android]
+ar = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android-ar"
+linker = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android30-clang"
 
 [target.x86_64-linux-android]
-linker = "x86_64-linux-android21-clang"
+ar = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android-ar"
+linker = "/home/jward/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/darwin-x86_64/bin/x86_64-linux-android30-clang"
